test/sematest/valid/array_access2.java
class Foo {
  public static void main(String[] args) {
    int[][] k = new int[33][];

    int p = k[0][3];
  }
}
