test/sematest/invalid/comparison_operators5.java
class B {

}

class A {
  public static void main(String[] args) {
    new A() != 3;
  }
}